fix line height of links. fix social buttons being cut off

--- a/client/components/card/_card.scss
+++ b/client/components/card/_card.scss
@@ -188,9 +188,10 @@
 
     & li {
       margin-bottom: 0.1em;
+      line-height: 1.1em;
 
       time {
-        padding-top: 0;
+        padding-top: 0.5em;
       }
     }
 
